--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
 
 .header-fields input {
   width: 100%;
-  font-size: 20px;
-  padding: 12px;
+  font-size: 18px;
   height: 50px;
+  padding: 10px 12px;
+  border: 1px solid #aaa;
+  border-radius: 6px;
 }
+
 
 
   .header-fields input {
