--- a/index.html
+++ b/index.html
@@ -172,7 +172,14 @@
   </div>
   <div style="width: 100%;">
     <label for="examDate" style="font-size: 18px; font-weight: bold;">Date</label>
-    <input type="date" name="exam_date" id="examDate" required style="width: 100%; font-size: 18px; padding: 12px; height: 48px; border: 1px solid #999; border-radius: 6px;" />
+    <input
+  type="text"
+  name="exam_date"
+  id="examDate"
+  placeholder="YYYY-MM-DD"
+  required
+  style="width: 100%; font-size: 18px; padding: 12px; height: 48px; border: 1px solid #999; border-radius: 6px;"
+ type="date" name="exam_date" id="examDate" required style="width: 100%; font-size: 18px; padding: 12px; height: 48px; border: 1px solid #999; border-radius: 6px;" />
   </div>
 </div>
 
